fix(general): scroll to top on ios

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,8 +2,6 @@ body {
   margin: 0;
 
   .mat-sidenav-container {
-    height: 100vh;
-
     .mat-sidenav {
       border: unset;
       box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px;
